--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,6 +104,7 @@
     background-color: #282c34;
     /* min-height: 100vh; */
     display: flex;
+    width: aut0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -112,6 +113,7 @@
 }
 
 .App-body {
+    width: auto;
     margin: 20px;
 }
 
