Minor corrections to App display

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -85,6 +85,7 @@
 
 .App {
     text-align: center;
+    width: auto;
     background-color: #282c34;
     min-height: 100vh;
 }
@@ -104,7 +105,7 @@
     background-color: #282c34;
     /* min-height: 100vh; */
     display: flex;
-    width: aut0;
+    width: auto;
     flex-direction: column;
     align-items: center;
     justify-content: center;
